corrected landing page css to allow scroll. Still see white space at bottom

--- a/handlers/Home/landing-styles.css
+++ b/handlers/Home/landing-styles.css
@@ -4,8 +4,8 @@
 .column-landing {
   width: 100%;
   height: 100%;
-  position:fixed;
-  background: linear-gradient(rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6)), url(http://povsim-staging.herokuapp.com/public/img/splashbg.jpg) no-repeat center center fixed;
+  padding: 1em;
+  background: linear-gradient(rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6)), url(http://povsim-staging.herokuapp.com/public/img/splashbg.jpg) no-repeat center center scroll;
   webkit-background-size: cover;
     -moz-background-size: cover;
       -o-background-size: cover;
